--- a/src/scss/_mosaic-display.scss
+++ b/src/scss/_mosaic-display.scss
@@ -1,12 +1,3 @@
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
 .mosaic-display-content {
   width: 100%;
   font-size: 1em;
@@ -19,7 +10,6 @@
   display: grid;
   grid-template-columns: auto auto;
   grid-column-gap: 12em;
-  // position: relative;
   padding-top: 3em;
   grid-row-gap: .4em;
   margin-left: 4em;
@@ -27,20 +17,13 @@
 }
 
 .mosaic-message {
-  // margin: 0 auto;
   padding-bottom: 2em;
-  opacity: 0;
-
-  -webkit-animation: fadeIn 400ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
-  animation: fadeIn 400ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
 }
 
 .mosaic-icon {
-  // display: inline-block;
   display: none;
   position: relative;
   top: 20px;
-  // margin: 0 auto;
   width: 60px;
   height: 60px;
 }
@@ -56,22 +39,17 @@
 
 .mosaic-message-content {
   font-size: 2em;
+  line-height: 1.1em;
 }
 
-
-
 .thinking {
-  background: url('/assets/icons/mosaic/thinking.svg');
+  color: #C061A9;
 }
 
 .feeling {
-  background: url('/assets/icons/mosaic/feeling.svg');
+  color: #34C034;
 }
 
 .seeing {
-  background: url('/assets/icons/mosaic/seeing.svg');
-}
-
-.other {
-  background: url('/assets/icons/mosaic/other.svg');
+  color: #7897CA;
 }
