updated digi fabric

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -1,5 +1,26 @@
-<div class="digital-fabrication-content">
+<article class="digital-fabrication-content" [@revealAboutItems]="revealAbout">
 
-Digital Fabrication Log
+  <section class="about-main">
 
-</div>
+    <div class="secondary-content about-item">
+      <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
+    </div>
+
+    <div class="primary-content about-item">
+      <div class="bio">
+        <p>
+          Hey, I'm Peter Cutler, and I'm a UX designer and developer living in Seattle.
+          I'm taking Digital Fabrication to learn some cool design methods.
+          I'll probably use what we learn to make things for my home, but maybe for work too.
+        </p>
+        <p>
+          Right now I'm looking forward to learning Grasshopper. Some of my friends have been using
+          it on interesting projects. I'm happy to teach my peers about design, coding,
+          or whatever else! Ask me anything in the Mill. Once we have to use our website for something, I'll probably update this page.
+        </p>
+      </div>
+    </div>
+
+  </section>
+
+</article>
