--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -27,6 +27,7 @@
 // Pages
 @import './mosaic-display';
 @import './mosaic-create';
+@import './digital-fabrication';
 @import './dashboard';
 @import './about';
 @import './work-list';
