--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -23,4 +23,40 @@
 
   </section>
 
+  <div class="assignments">
+    <div class="assignments-header">
+      Assignments
+    </div>
+    <div class="assignment">
+      A1: Laser Cut
+    </div>
+
+    <div class="assignment-body">
+      <p>Over the last six days, I was out of town for a family vacation in Los Angeles. This prevented me from getting a lot of this assignment done on time, but I was able to spend some gathering inspiration! We took trips to The Getty, LACMA, and The Broad museums, where I got to check out a lot of Bauhaus works from the early 20th century.</p>
+
+      <div class="assignment-h2">Kandinsky Works</div>
+
+      <p>I focused on some of Kandinsky's paintings, which are exploring the repetition of grids and lines. I wanted these to inform my repeating item, so that my 3d structure would look like a Kandinsky work in sculpture form.</p>
+
+      <app-image-viewer
+        path="../assets/images/digital-fabrication/a1/kandinsky-circles-in-a-circle.jpg"
+        description="Kandinsky - Circles in a Circle"
+        class="assignment-image">
+      </app-image-viewer>
+
+      <app-image-viewer
+        path="../assets/images/digital-fabrication/a1/kandinsky-wave.jpg"
+        description="Kandinsky - Wave"
+        class="assignment-image">
+      </app-image-viewer>
+
+      <app-image-viewer
+        path="../assets/images/digital-fabrication/a1/kandinsky-yellow-border.png"
+        description="Kandinsky - Yellow Border"
+        class="assignment-image">
+      </app-image-viewer>
+
+    </div>
+  </div>
+
 </article>
