--- a/src/scss/_digital-fabrication.scss
+++ b/src/scss/_digital-fabrication.scss
@@ -44,3 +44,29 @@
     line-height: 1.75em;
   }
 }
+
+.assignment-body p {
+  margin-top: 1em;
+}
+
+.assignments-header {
+  font-size: $hugest;
+}
+
+.assignment {
+  margin-top: 1em;
+  font-size: $prettybig;
+}
+
+.assignment-h2 {
+  margin-top: 1em;
+  font-size: $larger;
+}
+
+.assignment-body {
+  margin-top: 1em;
+}
+
+.assignment-image {
+  margin-top: 2em;
+}
