add sketches and AI link

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -34,7 +34,7 @@
     <div class="assignment-body">
       <p>Over the last six days, I was out of town for a family vacation in Los Angeles. This prevented me from getting a lot of this assignment done on time, but I was able to spend some gathering inspiration! We took trips to The Getty, LACMA, and The Broad museums, where I got to check out a lot of Bauhaus works from the early 20th century.</p>
 
-      <div class="assignment-h2">Kandinsky Works</div>
+      <div class="assignment-h2">Kandinsky</div>
 
       <p>I focused on some of Kandinsky's paintings, which are exploring the repetition of grids and lines. I wanted these to inform my repeating item, so that my 3d structure would look like a Kandinsky work in sculpture form.</p>
 
@@ -55,6 +55,27 @@
         description="Kandinsky - Yellow Border"
         class="assignment-image">
       </app-image-viewer>
+
+      <div class="assignment-h2">Sketching and Vector</div>
+
+      <p>I explored some of the different shapes from Kandinsky's paintings within Figma/Illustrator. I didn't have time to get too far past this phase, but I was able to play with some interlocking circles, based on "Circles within Circles".</p>
+
+      <app-image-viewer
+        path="../assets/images/digital-fabrication/a1/three-slot-circle.png"
+        description="Kandinsky - Yellow Border"
+        class="assignment-image">
+      </app-image-viewer>
+
+      <p>I predicted I wouldn't maintain stability in my model while including multiple slots along the X/Y axis of the circle, so shifted to a model with two, longer slots in a cross shape. This might let the circles interlock more effectively.</p>
+
+      <app-image-viewer
+        path="../assets/images/digital-fabrication/a1/cross-circle.png"
+        description="Kandinsky - Yellow Border"
+        class="assignment-image">
+      </app-image-viewer>
+
+      <p>You can download an illustrator file here: <a href="../assets/images/digital-fabrication/a1/circles-in-circles.ai">AI File</a></p>
+
 
     </div>
   </div>
