--- a/src/scss/_digital-fabrication.scss
+++ b/src/scss/_digital-fabrication.scss
@@ -47,14 +47,18 @@
 
 .assignment-body p {
   margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .assignments-header {
   font-size: $hugest;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .assignment {
   margin-top: 1em;
+  margin-bottom: 1em;
   font-size: $prettybig;
 }
 
