--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -62,7 +62,7 @@
 
       <app-image-viewer
         path="../assets/images/digital-fabrication/a1/three-slot-circle.png"
-        description="Kandinsky - Yellow Border"
+        description="Multiple small slots - probably a bad idea"
         class="assignment-image">
       </app-image-viewer>
 
@@ -70,7 +70,7 @@
 
       <app-image-viewer
         path="../assets/images/digital-fabrication/a1/cross-circle.png"
-        description="Kandinsky - Yellow Border"
+        description="Longer slots across the diameter - probably better"
         class="assignment-image">
       </app-image-viewer>
 
