add assets and text edit

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -58,7 +58,7 @@
 
       <div class="assignment-h2">Sketching and Vector</div>
 
-      <p>I explored some of the different shapes from Kandinsky's paintings within Figma/Illustrator. I didn't have time to get too far past this phase, but I was able to play with some interlocking circles, based on "Circles within Circles".</p>
+      <p>I explored some of the different shapes from Kandinsky's paintings within Illustrator. I didn't have time to get too far into this phase, but I was able to play with some interlocking circles, based on "Circles within Circles". Ideally I'd also include a series of lines/poles to flesh this out even further.</p>
 
       <app-image-viewer
         path="../assets/images/digital-fabrication/a1/three-slot-circle.png"
