--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="assignment-body">
-      <p>Over the last six days, I was out of town for a family vacation in Los Angeles. This prevented me from getting a lot of this assignment done on time, but I was able to spend some gathering inspiration! We took trips to The Getty, LACMA, and The Broad museums, where I got to check out a lot of Bauhaus works from the early 20th century.</p>
+      <p>Over the last six days, I was out of town for a family vacation in Los Angeles. This prevented me from getting a lot of this assignment done (for now), but I was able to gather inspiration and do some sketching! We took trips to The Getty, LACMA, and The Broad museums, where I got to check out a lot of Bauhaus works from the early 20th century.</p>
 
       <div class="assignment-h2">Kandinsky</div>
 
