--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -121,6 +121,14 @@
           class="assignment-image">
         </app-image-viewer>
 
+        <p>I wanted the "circles within the circles" to controlled by the size of the base circle (and the customizable material width). So I turned this into a little hub.</p>
+
+        <app-image-viewer
+          path="../assets/images/digital-fabrication/a2/7-grasshopper-controls.png"
+          description="Control hub"
+          class="assignment-image">
+        </app-image-viewer>
+
         <p>Next, I added a single region difference to create a unified circle-with-slot shape.</p>
 
         <app-image-viewer
