add remaining docs

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -310,19 +310,59 @@
 
         <p>Finally, with a raft, the print succeeded.</p>
 
+        <div class="work-body-image-grid">
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a3/print-1.jpg"
+            description="Removing the grooved ring from the raft"
+            borderOn="false">
+          </app-image-viewer>
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a3/print-2.jpg"
+            description="Testing the fit of the ring around the lamp"
+            borderOn="false">
+          </app-image-viewer>
+        </div>
+
+        <p>It fits pretty snugly around the lamp, so it will have to be turned on/off with the ring removed.</p>
+
+        <div class="assignment-h2">Laser Cutting</div>
+
+        <p>Next, I wanted to laser cut a "lamp shade" using printer paper or card stock, which would fit into the groove and circle around the lamp.</p>
+
+        <div class="work-body-image-grid">
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a3/lasercut-1.jpg"
+            description="Removing the grooved ring from the raft"
+            borderOn="false">
+          </app-image-viewer>
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a3/lasercut-2.jpg"
+            description="Testing the fit of the ring around the lamp"
+            borderOn="false">
+          </app-image-viewer>
+        </div>
+
+        <p>Ultimately, I removed a little too much from the middle of the paper. The extra long rectangular slits ended up costing the structure of the cylindrical lamp shade, so it's a little lopsided -- definitely something I'll look out for next time.</p>
+
         <div class="assignment-h2">Peer Attribution</div>
 
         <p>
-          Thanks to ___ for the tip about printing with a raft.
+          Thanks to Lukas for sharing laser cutting time. Thanks to Nitya for tips about Raft printing.
         </p>
 
         <div class="assignment-h2">Files</div>
 
-        <p>Rhino: </p>
+        <p> <a href="../assets/images/digital-fabrication/a3/cylinder-lamp-holder.3dm">Rhino</a>
+        </p>
 
-        <p>STL: </p>
+        <p> <a href="../assets/images/digital-fabrication/a3/cylinder-lamp-holder.stl">STL</a>
+        </p>
 
-        <p>DigiLab: </p>
+        <p><a href="../assets/images/digital-fabrication/a3/cylinder-lamp-holder.gcode">gcode</a>
+        </p>
+
+        <p><a href="../assets/images/digital-fabrication/a3/cylinder-lamp-lines.ai">ai</a>
+        </p>
 
       </div>
 
